Fix z-indexing on user info menu.

--- a/src/app/shared/pages/app/styles.less
+++ b/src/app/shared/pages/app/styles.less
@@ -142,6 +142,7 @@
     position: absolute;
     right: 6px;
     top: 50px;
+    z-index: 1;
 
     &:after {
       border-bottom: 8px solid @white;
